# Simplex

./: CMakeLists.txt  README.md
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
src/: Simplex.h  sxpch.cpp  sxpch.h
src/Platform/MacOS/: MacOSWindow.cpp  MacOSWindow.h
src/Simplex/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
src/Simplex/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
